Cube position mobile fixed

--- a/src/Pages/GlobalComponents/ProjectsCube/ProjectsCube.module.css
+++ b/src/Pages/GlobalComponents/ProjectsCube/ProjectsCube.module.css
@@ -174,4 +174,8 @@ object:hover {
   .wrapper {
     height: 400px;
   }
+
+  .viewport {
+    width: 400px;
+  }
 }
